fix chat box getting too big

--- a/client/src/components/styles/chatbox.css
+++ b/client/src/components/styles/chatbox.css
@@ -119,7 +119,7 @@
   left: 0;
   bottom: -5px;
   width: 100%; */
-  height: 15%;
+  /* height: 15%; */
 }
 
 #end-of-chat {
